--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -30,7 +30,6 @@
 \externaldocument{supple}
 
 \title{Early leafout leads to cooler growing seasons in woody species} % Phenological differences among species explain why early leafout extends the calendar but not thermal growing season
-%dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- it might be confusing to a reader unfamiliar with the concept
 
 \author{D.M. Buonaiuto $^{1,2,3}$, C.J. Chamberlain $^{2,3,4}$,
 Deirdre Loughnan$^{5}$, E.M. Wolkovich$^{2,3,5}$}
@@ -59,11 +58,9 @@ $^a$Corresponding author: 301.405.1061; dbuona@umd.edu\\
 
 %% To do:
 % Fix the abstract
-% Me: A few small items, see % TodoOct2025:
 % Me/Dan: add citations (at ADDcites?) and other places likely, ONCE we know the ref count
 % Me/Dan: When we do cut text, perhaps save for cover letter!
 % Dan and me: Make sure we say higher/lower thermal seasons throughout... 
-% Dan: Fix concept figure to say how many thermal units you get per day in spring vs later
 % Dan: Get a word count of abstract to refs (and also get a ref count) ... how far off are we from https://github.com/vvandermeersch/synchrony/issues/4 
   %DB says: abstract needs to be 70 word, currently at 67 but I feel like we need one more sentece explaining the significance?
         % Main text (excluding refs, abstract and figure captions) 1000-1500 words currenty at 1985 (prboably less cause that number includes the footnotes)
@@ -78,7 +75,9 @@ $^a$Corresponding author: 301.405.1061; dbuona@umd.edu\\
 % Most comments say: emw8Oct2025: 
 
 % emw6Nov2025 -- I think we should be careful on going too hard on carbon, especially in the abstract.
-\abstract{Recent results have challenged the assumption that longer growing seasons increase plant growth, but struggled to explain how. Using rarely available plant-level phenology from a common garden of 18 woody species, we found earlier leafout led to earlier growth cessation (budset) and lower thermal growing seasons, especially for early-leafing species. These results challenge our fundamental understanding of controls on budset and suggest why apparently longer seasons do not increase growth.}
+\abstract{Recent results suggest earlier leafout does not always increase plant growth, but have struggled to explain why. 
+Here, using rarely available plant-level phenology from a common garden of 13 woody species, we show that earlier leafout leads to earlier growth cessation (budset), and thus longer but cooler growing seasons, especially for early-leafing species. These results challenge fundamental assumptions about calendar versus thermal growing seasons with implications for carbon models. % or .. . about growth cessation in woody species with implications for carbon models
+}
 
 
 % emwJuly22: I can make more edits to abstract when we have a journal in mind and thus a length
@@ -94,18 +93,18 @@ $^a$Corresponding author: 301.405.1061; dbuona@umd.edu\\
 % This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable. 
 \clearpage
 %\section{Introduction}
-Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage (Fig: \ref{fig:cool1}a), following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
-However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity (Fig: \ref{fig:cool1}b), though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023},
+Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage (Figure \ref{fig:cool1}a), following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
+However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity (Figure \ref{fig:cool1}b), though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023},
 % CUTREFS: You only need one of {shanley2024, roe2021} and 1-2 of {Churkina2005,White1999,Keenan2014} ... I cut some. 
 % CUTREFS: camarero2022decoupled
 
 These results suggest fundamental gaps in our understanding of how early-season events and the environment of the growing season shape end-of-season events, but addressing these gaps requires working across plant strategies and varying definitions of a growing season. Because the timing of leafout and senescence are critical to plant growth strategies they vary strongly across species \citep{Grime:1977sw}. Within species, populations also vary \citep{aitken2016}, especially because end-of-season events are usually locally adapted %---with populations using unique photoperiods to cue growth cessation depending on the local climate 
-\citep[e.g. budset][]{bauerle2012photoperiodic,soolanayakanahally2013timing}. Increasing evidence also suggests local climate may define narrow periods of growth for many species, with most significant growth earlier in the growing season \cite{zweifel2021trees,Zohner2023}. These results suggest the calendar growing season (i.e., the number of days between the start and end of the growing season) may be less informative to predicting growth than estimates that directly incorporate environmental conditions \citep{Korner2023}.
+\citep[e.g. budset][]{bauerle2012photoperiodic,soolanayakanahally2013timing}. Increasing evidence also suggests local climate may define narrow periods of growth for many species, with most significant growth earlier in the growing season \cite{Zohner2023}. These results suggest the calendar growing season (i.e., the number of days between the start and end of the growing season) may be less informative to predicting growth than estimates that directly incorporate environmental conditions \citep{Korner2023}.
 % While small scale pot experiments are better for capturing these plant-level measurements, results to date generally cannot differentiate between different species.
 % Some studies have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but several recent studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}.
 
 % emw6Nov2025 -- anywhere you cite 2 or more papers for one point, try to cut down to one
-The thermal growing season---a period of favorable meteorological conditions for plant growth \citep{Korner2023}---offers an alternative to the calendar growing season. It is also widely used, most commonly in the metric of growing degree days, a temperature derived measure of time that accumulates when temperatures are above a certain minimal threshold \citep{CHUINE2000337,Moore:2014wl,YANG199561}. Because plant photosynthetic rates increase with temperature \citep{Farquhar:1980vm} the thermal growing season is mechanistically related to primary productivity, and thus may be a better proxy than calendar time for relating growing season length to carbon gain. Yet we generally lack plant-level phenological data for the start and end of season to examine how the calendar and thermal seasons of species and populations compare across years. 
+The thermal growing season---a period of favorable meteorological conditions for plant growth \citep{Korner2023}---offers an alternative to the calendar growing season. It is widely used, most commonly in the metric of growing degree days, as a temperature-derived measure of time that accumulates when temperatures are above a certain minimal threshold \citep{CHUINE2000337,YANG199561}. Because plant photosynthetic rates increase with temperature \citep{Farquhar:1980vm} the thermal growing season is mechanistically related to primary productivity, and thus may be a better proxy than calendar time for relating growing season length to carbon gain. Yet we generally lack plant-level phenological data for the start and end of season to examine how the calendar and thermal seasons of species and populations compare across years. 
 
 % Importantly, depending on the interannual temperature variation, years with substantially different calendar growing seasons can have very similar thermal growing seasons, or \emph{vice versa}, but we generally lack plant-level phenological data for the start and end of season to examine how the calendar and thermal seasons of species and populations compare across years. 
 % Recent work has suggested early, increased productivity in the calendar growing season drives early senescence \citep{Zani2020}, and proposed that plants adjust their phenological trajectory mid-season based on a combination of growing season temperature and daylength \citep{Zohner2023}, thus maintaining a consistent thermal growing season. 
@@ -125,25 +124,28 @@ Here, we use rarely available plant-level data from three years of a multi-speci
 \fi
 
 % emw6Nov2025 -- we don't have inference at 2 decimal places, can you change throughout to 1 decimal place?
-Across three years and 13 co-occurring species (Tab: \ref{listSp}) collected from four populations across a 4.5$\degree$ latitudinal gradient (Fig:\ref{fig:map}), our common garden (located in Boston, Massachusetts) captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}a,b). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:cool1}c,d), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
+% dl15Nov2025 you say 18 spp in the abstract
+Across three years and 13 co-occurring species (Tab: \ref{listSp}) collected from four populations across a 3.5^{\circ}$ latitudinal gradient (Figure \ref{fig:map}), our common garden (located in Boston, Massachusetts) captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}a,b). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Figure \ref{fig:cool1}c,d), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
 
 % emw6Nov2025 -- Can you add a fig ref for 'This result was driven by an apparent relationship between leafout and budset at the individual level (FIG)'?
 Longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed; instead
-early calendar growing seasons led to lower (cooler) thermal growing seasons (Fig: \ref{fig:cool1}c,d, this and other results were similar when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:vapar}c). 
+early calendar growing seasons led to lower---cooler---thermal growing seasons (Figure \ref{fig:cool1}c,d, this and other results were similar when we determined the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This was driven by a relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:vapar}c). 
 
 % emw6Nov2025 -- I cut the below point because I think it is best explained in the figure (and would take more words here to explain)
 % ', and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums'
-Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Fig: \ref{fig:cool1}-\ref{fig:vapar}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, likely because their earlier leafout still occurred in thermally favorable times of the season. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ days for leafout: $:8.12 $UI_{90}$[5.54,11.56], days for budset: 9.73 $UI_{90}$[6.99,13.57], days for season length: 14.45, $UI_{90}$[10.34,19.9).
+Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:cool1}-\ref{fig:vapar}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, bit it also did not increase it---suggesting thermal seasons do not increase with calendar growing seasons for any of our studied species. Species was the a major predictor of variation in leafout and budset% and growing season length 
+($\sigma_{species}$ days for leafout: $8.1, $UI_{90}$[5.5, 11.6], days for budset: 9.7, $UI_{90}$[7, 13.6]).% days for season length: 14.4 $UI_{90}$[10.3,19.9).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
-These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to accelerate their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees could find little relationship between earlier leafout and growth \citep{cuny2012life,michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were species-dependent, previous findings may depend on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species. % given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
+These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to accelerate their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees could find little relationship between earlier leafout and growth \citep{cuny2012life,michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were species-dependent, previous findings may depend on the species studied \citep{cuny2012life,michelot2012comparing}. This cross-species variation  likely scales up to affect ecosystem-level estimates, which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species. % given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
 
 % emw6Nov2025 -- avoid 'plastic' here as some would not use the word the way we do ... 
 % emw6Nov2025 -- save words by not naming the sites
-Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$: 10.65 days $UI_{90}$[4.88, 20.86], Fig: \ref{fig:vapar}b), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$: 0.57, $UI_{95}$[0.04, 1.77], Fig: \ref{fig:vapar}a). Yet our finding of up to 15 fays of variation across years in budset was surprising (\sigma_{year}$:15.02 days, $UI_{90}$[6.44, 30.84], Fig: \ref{fig:vapar}b) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. We did find evidence of local adaptation ($\sigma_{population}$: 2.34 days, $UI_{90}$[0.4, 6.13], Fig \ref{fig:vapar}a), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}a) and 6X and 4X smaller than the variation due to year and species (respectively). 
+Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$: 10.7 days, $UI_{90}$[4.9, 20.9], Figure \ref{fig:vapar}b), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$: 0.6 days, $UI_{90}$[0, 1.8], Figure \ref{fig:vapar}a). Yet our finding of 15 days of variation across years in budset was surprising (\sigma_{year}$: 15 days, $UI_{90}$[6.4, 30.8], Figure \ref{fig:vapar}b) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. %dl15Nov2025: I would specify "local adaptation in budset" just to help the reader stay focused
+We did find evidence of local adaptation ($\sigma_{population}$: 2.3 days, $UI_{90}$[0.4, 6.1], Figure \ref{fig:vapar}a), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}a) and 7X and 4X smaller than the variation due to year and species (respectively). 
 
 % emw6Nov2025 -- CUTREFS: Olsen2014, vico2021
-The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues  appears an important next step. Testing these relationships for other end of season events could also help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}---with different implications for carbon gain \citep{Korner2023}.
+The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues while also testing these relationships for other end of season events could help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year \citep{Michelson2018}---with different implications for carbon gain \citep{Korner2023}.
 
 % Shortened for space
 \iffalse
@@ -164,12 +166,12 @@ Budset represents the stop of primary growth and generally correlates strongly w
 %
 %  Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}).% ADDcites? from noeviany in whathappened.R in grephon repo
 
-Our multi-species common garden study showed that for early-leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth, yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,dow2022warm,silvestro2023longer}. Our results suggest little advantage from a carbon or primary productivity perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. % Cut for space:  Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
-Varying light availability over the early season combined with different plant strategies may alter this equation, however, potentially explaining why some species leafout during these thermally unfavorable conditions. Supporting this, we found understory species often showed the strongest relationship, suggesting that leafing out in thermally poor conditions before the upper canopy closes and reduces light may be a successful strategy. 
+Our multi-species common garden study showed that earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth and may especially deprive early-leafing species from fully using late-season warmth. While this may explain why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{cufar2015variations,dow2022warm,silvestro2023longer}, it generates a new question of why any species leafs out when thermal conditions are unfavorable. 
+% Our results suggest little advantage from a carbon or primary productivity perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. % Cut for space:  Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
+Varying light availability over the early season combined with different plant strategies may alter this equation, however, potentially making this a successful strategy for some species. Supporting this, we found understory species often showed the strongest relationship, suggesting they leaf out in thermally poor conditions to maximize access to light before the upper canopy closes. 
 
 % Shortened for space
 \iffalse
-
 %  While experiments almost always track individuals, they often last only one year and are conducted often on one species, making it difficult to scale them up. While new data is continually changing this reality, we need better data to link mechanistically from the plant to community and ecosystem ...
 Our results raise questions about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions. In our study, the species that leafed out the earliest are understory shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in sub-optimal thermal conditions \citep{AUGSPURGER2005}.
 \fi
@@ -177,7 +179,7 @@ Our results raise questions about why some species leafout early during these un
 The link between earlier leafout and lower thermal seasons was driven by variation across years at the individual and species levels---scales that are not always well studied in phenology research  \citep{Menzel1999}. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding.  Sampling across species of different leafout and growth strategies appears especially important, alongside studies of how different communities and climates may shape the relationship between calendar and thermal growing seasons. 
 % Sampling across species of different leafout and growth strategies appears especially important, especially given that the earliest species showed the largest declines in thermal growing season with earlier leafout. Whether this finding is consistent across other communities of species---and other climates is an important question. 
 %some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and 
-Understanding whether the thermal responses are consistent across species with different strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes.
+Understanding whether thermal responses are consistent across species with different strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes.
 
 % Our findings suggest that linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). Progress will require more efforts to understand and model species-level shifts in phenology.  
 
@@ -197,24 +199,28 @@ Understanding whether the thermal responses are consistent across species with d
 \newpage
 \section{Figures} 
 
-%dl2024Sept20 such a cool result! 
+%dl15Nov2025 I think the legend in panel c needs to be larger, especially the symbols
 %cjc2024Sept25 - agreed, this is awesome!
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.6\textwidth]{..//analyses/figures/finalfigure1.png} 
     
   \begin{singlespace}  
-    \caption{The relationship between leafout timing and growing season length differs between the calendar growing season and the thermal growing season. Panel (a) conceptually demonstrates the expected relationship between leafout timing, and both calendar and thermal growing season length under the expectation that longer growing seasons lead to increased carbon storage. Panel (b) conceptually demonstrates the expected relationship between leafout timing, and both calendar and thermal growing season length under the expectation that plant dynamically adjust the end of their growing season such that longer growing seasons do not increase carbon storage. In our study, later leafout resulted in a shorter calendar growing season (median estimated effect: -0.45 days, $UI_{90}[-0.68,-0.21]$) (c) and this pattern was consistent across species in our study (d). In contrast, an increasing later leafout resulted in a longer thermal growing season (median estimates effect: 5.3 growing-degree days, $UI_{90}[2.12,8.44]$) (d) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in c) represent the raw data (per individual tree per year).}
+    \caption{The relationship between leafout timing and growing season length differs between the calendar and the thermal growing seasons. Panels (a) and (b) conceptually demonstrate the expected relationships between leafout timing and both calendar and thermal growing seasons under two different expectations, with (a) showing the expectation that longer seasons lead to increased carbon storage, while panel (b) shows the expectation that plant dynamically adjust the end of their growing season such that longer growing seasons do not increase carbon storage. In our study, later leafout resulted in a shorter calendar growing season (median estimated effect: -0.4 days, $UI_{90}[-0.7,-0.2]$) (c) and this pattern was consistent across species in our study (d). In contrast, later leafout resulted in a longer thermal growing season (median estimates effect: 5.3 growing-degree days, $UI_{90}[2.1,8.4]$) (d), an effect that was stronger for species that typically leafout earlier in the season---panels in (d) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in (c) represent the raw data (per individual tree per year).}
     \end{singlespace}
     \label{fig:cool1}
 \end{figure}
 
 \newpage
 
+%dl15Nov2025 I think this legend also needs to be larger in the top panel, also is it possible to move the bottom label in pancel c to be to the right of the green line and not overlapping the y-axis?
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.9\textwidth]{..//analyses/figures/finalfigure2.png}
-    \caption{Difference in leafout and budset  (in days) partitioned populations (a) and years (b). Point represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals, respectively. Panel (c) demonstrates how thermal conditions can vary across the calendar growing season and can generate a complex relationship between the calendar and thermal growing seasons by depicting the relationship between indivuals of two shurb species with similar life-history strategies. Despite the fact the the early individual (light green line) of \emph{Aronia melanocarpa} leafs out 28 days before it's later con-generic (dark green line) and only sets bud 18 days before it (i.e., it has a 10 day longer calendar growing season) it's thermal growing season is shorter because most of its growth advantage takes place in the unfavorable early spring. In contrast for \emph{Myrica gale} where both the early (light green) and later (dark green) individual leaf out later in the spring, the 15 day head start and 4 day earlier finish of the earlier individual (11 day longer calendar growing season) results in a longer thermal growing season.}
+    \caption{Differences in leafout and budset (in days) due to variation from populations (a) and years (b). Points represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals, respectively. Panel (c) shows how shifts in leafout and budset generate varying calendar and thermal growing seasons, contrasting two shrub species with similar life-history strategies. 
+ For \emph{Aronia melanocarpa}, the earlier individual (light green line) has a 10 day longer growing season (by leafing out 28 days earlier followed by setting bud 18 days earlier) than its the later leafing individual (dark green line) but has a lower (cooler) thermal season because most of its early growth advantage takes place in the thermally unfavorable early spring. In contrast, for \emph{Myrica gale}, both the early (light green) and later (dark green) individual leaf out later in the spring, such that the 11 day longer calendar growing season (from a 15 day leafout  and 4 day earlier budset of the earlier individual) results in slightly warmer thermal season.}
+    %dl15Nov2025: I found this next bit a little awkward and suggest the following minor edits:
+%    Despite the fact that the earlier individual (light green line) of \emph{Aronia melanocarpa} leafs out 28 days before the later individual (dark green line) and sets bud only 18 days before it (i.e., it has a 10 day longer calendar growing season), it's thermal growing season is shorter because most of its growth advantage takes place in the unfavorable early spring. In contrast for \emph{Myrica gale} both the early (light green) and later (dark green) individual leaf out later in the spring, as such the 15 day head start and 4 day earlier finish of the earlier individual (creating an 11 day longer calendar growing season) results in a longer thermal growing season.
 
     \label{fig:vapar}
 \end{figure}
@@ -230,7 +236,7 @@ Understanding whether the thermal responses are consistent across species with d
 \clearpage
 
 
-
+%dl15Nov2025 Double check references for: Liu 2016 and Rhode 2011
 \newpage
 \bibliography{..//refs/wildhell.bib}
 
