Some suggested edits

--- a/docs/NCC_coverLetter.Rnw
+++ b/docs/NCC_coverLetter.Rnw
@@ -41,14 +41,17 @@
 \noindent{Dear Dr. ,}\\
 \vspace{1.5ex}
 
-\noindent Please consider this manuscript ``Early leafout leads to cooler growing seasons in woody species" as a Brief Communication in \textit{Nature Climate Change}.\\
+\noindent Please consider this manuscript ``Early leafout leads to cooler growing seasons in woody species" as a Brief Communication in \textit{Nature Climate Change}. We report on three years of new rarely-available plant-level data that shows that earlier leafout leads to shorter thermal growing seasons with implications for how climate change may alter plant growth and carbon storage. \\ %emw1Dec2025 -- can you add some refs to big recent papers on this topic? Ideally from Science, Nature, NCC
 
-\noindent The extension of the growing season in the spring in temperate regions is one the most prominent biological indicators of climate change. Most models of carbon storage assume that earlier growth will result in longer seasons and thereby enhance forest carbon storage, however current findings have challenged this assumption, suggesting rather than plants dynamically adjust the end of their growing season based on their carbon-sink capacity.
+% The extension of the growing season in the spring in temperate regions is one the most prominent biological indicators of climate change. 
+\noindent Most models of carbon storage assume that earlier growth will result in longer seasons and increase terrestrial carbon sequestration in forests, yet recent findings have challenged this pivotal assumption (SOMECITES). New work has suggested that plants may dynamically adjust the end of their growing season based on their carbon-sink capacity (SOMEOTHERCITES), but [insert some major limitations of this work] ... % Ideally limitations we address, like: it's mostly on tiny potted plants extended to modeled estimates or one species or  ... then end this paragraph on something like ...
+These results are all based on the assumption/idea that variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season (i.e., the period of favorable meteorological conditions for plant growth) CITEKORNER ELE, which should remain relatively stable across years. This, however, has not been tested given the paucity of start and end of season phenological events for adult trees. 
 
+\noindent Here we report on new data from a multi-species common garden that shows longer calendar growing seasons lead to shorter---cooler---growing seasons. Our results are based on rarely available plant-scale phenological measurements from three years across 13 woody species, all native and co-occurring in Eastern United States forests and sampled from four sites spanning XX degree latitude. 
+% Can you work on what you want to say here and then I can edit (I started to edit, but there's a mix of things going on that I do not fully get and you know this work better than me)? I also suggest we add something here about how our results raise major questions about the widespead assumption that budset is locally adapted and driven by photoperiod.... 
+We found that earlier leafout was correlated with earlier growth cessation (budset), resulting in a relatively stable calendar growing period over the three years at the community level.  Because thermal conditions were lower at the start than end of the season,  the relationship between earlier leafout and budset resulted in shorter thermal growing seasons when leafout was early---a relationship that was strongest in early-leafing species.
 
-\noindent We predicted that ff this is the case, variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season (i.e., the period of favorable meteorological conditions for plant growth), which should remain relatively stable across years.We tested this prediction using rarely available plant-scale phenological measurements from a three year common garden with 13 woody species,native to the Eastern United States from four populations of origin. We found that at the community level, earlier leafout was correlated with earlier budset, resulting in a relatively stable calendar growing period over the three years.  Because thermal conditions were lower at the start than end of the season,  the relationship between earlier leafout and budset resulted in shorter thermal growing seasons when leafout was early---a relationship that was strongest in early-leafing species.
-
-\noindent We believe this work would be of broad interest to the readers of \textit{Nature Climate Change}.Our study addresses a timely debate in the field of climate change ecology, and help explain some of the contrasting results of how climate change affects growing season length and productivity. We show how species-levels responses scale up to community level patterns which identifies a clear path forward for improving how phenology is intigrated into model of carbon storage.
+\noindent We believe this work would be of broad interest to the readers of \textit{Nature Climate Change}. Our study addresses a timely debate in the field of climate change ecology, and help explain some of the contrasting results of how climate change affects growing season length and productivity. We show how species-levels responses scale up to community level patterns which identifies a clear path forward for improving how phenology is intigrated into model of carbon storage.
 
 \noindent  Following the guideliens for a Brief Communication in \textit{Nature Climate Change}, the main text of this manuscript is X words in length and it contains 2 figures. It is co-authored by C.J. Chamberlain, Deirdre Loughnan abd E.M. Wolkovich and is not under consideration elsewhere. We hope that you will find it suitable for publication in \textit{Nature Climate Change}, and look forward to hearing from you.\\\\ 
 \\Sincerely,\\\\\\\\\\
